# RearSilver-Stream-Suite

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  installer.nsi  license.txt  rearsilver Icon.ai  resources.qrc
.github/workflows/: pr-pull.yaml  push.yaml  validate.yaml
assets/music/: music-fallback-vinyl.ai
assets/overlay/: music-overlay.html
data/locale/: en-GB.ini
experiments/cef_audio_poc/: main.cpp
services/youtube-resolver/: README.md  package-lock.json  package.json  wrangler.toml
services/youtube-resolver/src/: index.js
src/: plugin-main.cpp  rs_controls.cpp  rs_dock_widget.cpp  rs_dock_widget.h  rs_entitlements.cpp  rs_entitlements.hpp  rs_helpers.cpp  rs_layout.cpp  rs_main_dock.cpp  rs_main_dock.hpp  rs_menu.cpp  rs_navigation.cpp  rs_panels.cpp  rs_scenes_sources.cpp  rs_scenes_sources.hpp  rs_settings.cpp  rs_stats.cpp  rs_stats.hpp  rs_theme.cpp
src/enhancements/: rs_auto_start.cpp  rs_auto_start.hpp  rs_browser_refresh.cpp  rs_browser_refresh.hpp  rs_instant_replay.cpp  rs_instant_replay.hpp  rs_quick_text.cpp  rs_quick_text.hpp  rs_timer.cpp  rs_timer.hpp
src/enhancements/timer_overlay/: index.html
src/music_player/: app.rc  main.cpp  music_hub.cpp  music_hub.hpp  youtube_resolver.cpp  youtube_resolver.hpp
src/rs_music/: rs_music.cpp  rs_music.hpp  rs_music_command_router.cpp  rs_music_command_router.hpp  rs_music_controller.cpp  rs_music_controller.hpp  rs_music_helpers.cpp  rs_music_helpers.hpp  rs_music_local_player.cpp  rs_music_local_player.hpp  rs_music_metadata.cpp  rs_music_metadata.hpp  rs_music_pcm_ipc.hpp  rs_music_pcm_source.cpp  rs_music_pcm_source.hpp  rs_music_player.html  rs_music_scheduler.cpp  rs_music_scheduler.hpp  rs_music_server.cpp  rs_music_server.hpp  rs_music_tls_probe.cpp  rs_music_tls_probe.hpp  rs_music_twitch_auth.cpp  rs_music_twitch_auth.hpp  rs_music_twitch_irc_reader.cpp  rs_music_twitch_irc_reader.hpp  rs_music_twitch_irc_sender.cpp  rs_music_twitch_irc_sender.hpp  rs_music_ws.cpp  rs_music_ws.hpp  rs_music_youtube_resolver.cpp  rs_music_youtube_resolver.hpp
src/rs_music/state/: rs_music_state.cpp  rs_music_state.hpp  rs_music_track.hpp
src/rs_music/ui/: rs_music_now_playing.cpp  rs_music_now_playing.hpp  rs_music_overlay.cpp  rs_music_overlay.hpp  rs_music_playlist.cpp  rs_music_playlist.hpp  rs_music_queue.cpp  rs_music_queue.hpp  rs_music_requests.cpp  rs_music_requests.hpp  rs_music_settings.cpp  rs_music_settings.hpp  rs_music_setup.cpp  rs_music_setup.hpp
